Regression: GeoNode attribute output passing does not work in the latest nightly #97595

Closed
opened 2022-04-25 00:12:35 +02:00 by kursad k · 6 comments
Member

System Information
Operating system: Windows 11

Blender Version
Broken: c486da0238
Worked: b67ccc333a

Caused by 65e4c91bec

b67ccc333a the scene works properly b67ccc333a is from 04/20
image.png

c486da0238 the same is broken in this version c486da0238 is from 04/24

image.png

Short description of error

The attribute passing from the geonodes to the object level seems to be either broken , or there is a change in the way things work.

Exact steps for others to reproduce the error

Load the attached scene in either 3.1 or in b67ccc333a, observe that it works

Load the same scene in c486da0238, and observe that the lattice modifier has no affect because the "top" vgroup has all zeroed out, unlike it is in 3.1 or the b67ccc333a version

bug_output_24042022_1703_15.blend

**System Information** Operating system: Windows 11 **Blender Version** Broken: c486da0238bd Worked: b67ccc333a55 Caused by 65e4c91bec **b67ccc333a55** the scene works properly b67ccc333a55 is from 04/20 ![image.png](https://archive.blender.org/developer/F13023437/image.png) **c486da0238bd** the same is broken in this version c486da0238bd is from 04/24 ![image.png](https://archive.blender.org/developer/F13023441/image.png) **Short description of error** The attribute passing from the geonodes to the object level seems to be either broken , or there is a change in the way things work. **Exact steps for others to reproduce the error** Load the attached scene in either 3.1 or in b67ccc333a55, observe that it works Load the same scene in c486da0238bd, and observe that the lattice modifier has no affect because the "top" vgroup has all zeroed out, unlike it is in 3.1 or the b67ccc333a55 version [bug_output_24042022_1703_15.blend](https://archive.blender.org/developer/F13023450/bug_output_24042022_1703_15.blend)
Author
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
Hans Goudey self-assigned this 2022-04-25 01:19:39 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I've both builds to test and I can confirm this.

Looks like Hans is investigating so I won't search for the responsible commit :)

I've both builds to test and I can confirm this. Looks like Hans is investigating so I won't search for the responsible commit :)
Philipp Oeser changed title from GeoNode attribute output passing does not work in the latest nightly to Regression: GeoNode attribute output passing does not work in the latest nightly 2022-04-25 10:00:11 +02:00

This issue was referenced by 96834a7bac

This issue was referenced by 96834a7bacffc97d87af6b8b89aa2a091b5b094a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97595
No description provided.